--- a/src/main/resources/assets/fpsmatch/lang/en_us.json
+++ b/src/main/resources/assets/fpsmatch/lang/en_us.json
@@ -145,22 +145,22 @@
   "item.fpsmatch.t_incendiary_grenade" : "Incendiary Grenade",
   "item.fpsmatch.bulletproof_armor" : "TestItem - Bulletproof Armor",
   "item.fpsmatch.bulletproof_with_helmet" : "TestItem - Bulletproof Armor with Helmet",
-  "item.fpsmatch.shop_edit_tool": "shop edit tool",
+  "item.fpsmatch.shop_edit_tool": "Shop Edit Tool",
 
-  "message.fpsm.shop_edit_tool.missing_type": "No available map types!",
-  "message.fpsm.shop_edit_tool.switch_type": "Game Type: %s",
-  "message.fpsm.shop_edit_tool.missing_map_by_type": "No available maps for type [%s]!",
-  "message.fpsm.shop_edit_tool.missing_shop": "No available shops!",
-  "message.fpsm.shop_edit_tool.missing_map": "No available maps!",
-  "message.fpsm.shop_edit_tool.load_from_team": "Loaded data from your team: Type=%s, Map=%s, Shop=%s",
-  "message.fpsm.shop_edit_tool.map_reset_after_type_switch": "Map reset to: %s (type switched)",
-  "message.fpsm.shop_edit_tool.mode.type": "Game Type",
-  "message.fpsm.shop_edit_tool.mode.map": "Map",
-  "message.fpsm.shop_edit_tool.mode.team": "Team",
-  "message.fpsm.shop_edit_tool.switch_mode": "Edit Mode: %s",
-  "message.fpsm.shop_edit_tool.switch_map": "Map: %s",
-  "message.fpsm.shop_edit_tool.switch_team": "Team: %s",
-  "message.fpsm.tool.clear": "Cleared Tool Data",
+  "message.fpsm.edit_tool.missing_type": "No available map types!",
+  "message.fpsm.edit_tool.switch_type": "Game Type: %s",
+  "message.fpsm.edit_tool.missing_map_by_type": "No available maps for type [%s]!",
+  "message.fpsm.edit_tool.missing_team": "No available teams!",
+  "message.fpsm.edit_tool.missing_map": "No available maps!",
+  "message.fpsm.edit_tool.load_from_team": "Loaded data from your team: Type=%s, Map=%s, Shop=%s",
+  "message.fpsm.edit_tool.map_reset_after_type_switch": "Map reset to: %s (type switched)",
+  "message.fpsm.edit_tool.mode.type": "Game Type",
+  "message.fpsm.edit_tool.mode.map": "Map",
+  "message.fpsm.edit_tool.mode.team": "Team",
+  "message.fpsm.edit_tool.switch_mode": "Edit Mode: %s",
+  "message.fpsm.edit_tool.switch_map": "Map: %s",
+  "message.fpsm.edit_tool.switch_team": "Team: %s",
+  "message.fpsm.edit_tool.clear": "Cleared Tool Data",
 
   "message.fpsmatch.error.no_spawn_points": "There is no spawn-points for the game to start",
   "message.fpsmatch.error.not_enough_spawn_points": "There are not enough spawn-points for the game to start",
