--- a/src/main/resources/assets/fpsmatch/lang/zh_cn.json
+++ b/src/main/resources/assets/fpsmatch/lang/zh_cn.json
@@ -143,12 +143,12 @@
   "item.fpsmatch.bulletproof_armor": "测试物品 - 防弹护甲",
   "item.fpsmatch.bulletproof_with_helmet": "测试物品 - 防弹护甲与头盔",
   "item.fpsmatch.shop_edit_tool": "商店内容编辑工具",
-  "message.fpsm.shop_edit_tool.missing_type": "没有可用的游戏类型！",
-  "message.fpsm.shop_edit_tool.switch_type": "游戏类型: %s",
-  "message.fpsm.shop_edit_tool.missing_map_by_type": "[%s] 游戏类型中没有可用的地图！",
-  "message.fpsm.shop_edit_tool.missing_shop": "没有可用商店！",
-  "message.fpsm.shop_edit_tool.missing_map": "没有可用地图！",
-  "message.fpsm.tool.clear": "已清除商店编辑工具数据",
+  "message.fpsm.edit_tool.missing_type": "没有可用的游戏类型！",
+  "message.fpsm.edit_tool.switch_type": "游戏类型: %s",
+  "message.fpsm.edit_tool.missing_map_by_type": "[%s] 游戏类型中没有可用的地图！",
+  "message.fpsm.edit_tool.missing_team": "没有可用商店！",
+  "message.fpsm.edit_tool.missing_map": "没有可用地图！",
+  "message.fpsm.edit_tool.clear": "已清除商店编辑工具数据",
   "message.fpsmatch.error.no_spawn_points": "没有队伍出生点来开始游戏",
   "message.fpsmatch.error.not_enough_spawn_points": "没有足够的队伍出生点来开始游戏",
   "gui.fpsm.shop_editor.title": "商店内容编辑器",
@@ -206,12 +206,12 @@
   "config.fpsmatch.common.throwable.smoke_shell_living_time": "烟雾弹存活时间",
   "config.fpsmatch.common.throwable.smoke_shell_living_time.tooltip": "烟雾弹激活后的存活时间 (tick)。20 tick = 1秒",
   "gui.fpsm.dummy_ammo": "虚拟弹药",
-  "message.fpsm.shop_edit_tool.load_from_team": "已经从你所在的队伍加载数据: 游戏类型=%s, 地图=%s, 队伍=%s",
-  "message.fpsm.shop_edit_tool.map_reset_after_type_switch": "地图重置为: %s (游戏类型改变)",
-  "message.fpsm.shop_edit_tool.mode.type": "游戏类型",
-  "message.fpsm.shop_edit_tool.mode.map": "地图",
-  "message.fpsm.shop_edit_tool.mode.team": "队伍",
-  "message.fpsm.shop_edit_tool.switch_mode": "编辑模式: %s",
-  "message.fpsm.shop_edit_tool.switch_team": "队伍: %s",
-  "message.fpsm.shop_edit_tool.switch_map": "地图: %s"
+  "message.fpsm.edit_tool.load_from_team": "已经从你所在的队伍加载数据: 游戏类型=%s, 地图=%s, 队伍=%s",
+  "message.fpsm.edit_tool.map_reset_after_type_switch": "地图重置为: %s (游戏类型改变)",
+  "message.fpsm.edit_tool.mode.type": "游戏类型",
+  "message.fpsm.edit_tool.mode.map": "地图",
+  "message.fpsm.edit_tool.mode.team": "队伍",
+  "message.fpsm.edit_tool.switch_mode": "编辑模式: %s",
+  "message.fpsm.edit_tool.switch_team": "队伍: %s",
+  "message.fpsm.edit_tool.switch_map": "地图: %s"
 }
