在做地图创建工具

--- a/src/main/resources/assets/fpsmatch/lang/en_us.json
+++ b/src/main/resources/assets/fpsmatch/lang/en_us.json
@@ -162,6 +162,10 @@
   "message.fpsm.edit_tool.switch_team": "Team: %s",
   "message.fpsm.edit_tool.clear": "Cleared Tool Data",
 
+  "message.fpsm.map_edit_tool.switch_mode": "Edit Mode: ",
+  "message.fpsm.map_edit_tool.switch_mode.region": "Region Selecting",
+  "message.fpsm.map_edit_tool.switch_mode.spawn_point": "Spawn Point Adding",
+
   "message.fpsmatch.error.no_spawn_points": "There is no spawn-points for the game to start",
   "message.fpsmatch.error.not_enough_spawn_points": "There are not enough spawn-points for the game to start",
 
